[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/Jump 1.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/Jump 2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/Jump 6.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/Jump 4.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/Jump 3.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/Jump 5.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/wood03.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/Surprise 3.wav" type="AudioStream" id=9]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleShape" id=2]

[sub_resource type="CylinderShape" id=3]
radius = 0.921663

[sub_resource type="SphereMesh" id=4]

[sub_resource type="CylinderShape" id=5]
radius = 1.33735
height = 0.47286

[sub_resource type="SphereMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
params_cull_mode = 2
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="Animation" id=8]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosion:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 100, 100, 100 ) ]
}

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.65479, 0 )
script = ExtResource( 1 )
grunt1 = ExtResource( 2 )
grunt2 = ExtResource( 3 )
grunt3 = ExtResource( 6 )
grunt4 = ExtResource( 5 )
grunt5 = ExtResource( 7 )
grunt6 = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Feet" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.55787e-05, -2.34697, 5.21541e-07 )

[node name="CollisionShape" type="CollisionShape" parent="Feet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.82526, 0 )
shape = SubResource( 3 )

[node name="JumpCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CPUParticles" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.523456, -1.28166, 0.211511 )
emitting = false
lifetime = 0.25
one_shot = true
explosiveness = 0.5
local_coords = false
mesh = SubResource( 4 )
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3( 0, 1, 0 )
angular_velocity = 1.0
linear_accel = 10.86
scale_amount = 0.5
scale_amount_random = 1.0

[node name="WallJumpRange" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="WallJumpRange"]
shape = SubResource( 5 )

[node name="RecordTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="Explosion" type="MeshInstance" parent="."]
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Explode = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[node name="Ohmygod" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="Impact" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
pitch_scale = 0.5
[connection signal="timeout" from="JumpCooldown" to="." method="_on_JumpCooldown_timeout"]
[connection signal="timeout" from="RecordTimer" to="." method="_on_RecordTimer_timeout"]
